Add venv to scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 lemminflect>=0.2.0
-git+git://github.com/inthescales/bot-buddy#egg=botbuddy
+tweepy==4.12.0
+mastodon.py==1.5.1
+git+https://github.com/inthescales/bot-buddy.git#egg=botbuddy
